--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <li>Select the proper mark up tags or code to achieve a particular result.</li>
     <li>Identify improperly used mark-up and code.</li>
     <li>Produce modern standards compliant web pages.</li>
-    <li>Deploy webpages to a public server</li>
+    <li>Deploy webpages to a public server.</li>
   </ul>  	
   <h2>Course objectives</h2>
   <p>At the conclusion of this couse, each successful student will be able to:</p>
   <ul>
     <li>Explain the client and server architecture of the internet and related web technologies</li>
     <li>Use a basic text editor and other software tools to create web pages using HTML, CSS, JavaScript, JQuery.</li>
-    <li>Deploy web pages to a Linux based web server using sftp</li>
+    <li>Deploy web pages to a Linux based web server using sftp.</li>
   </ul>
 </body>
 </html>
