--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
   <h1 style="color:red;">ITMD-361 Internet Technologies and Web Design</h1>
   <h3>Fall 2019</h3>
-  <p>Student Name And Email</p>
+  <p>Babar Kamran 
+	 bkamran@iit.edu</p>
   <h2>Professor:</h2>
   <p>Daniel Krieglstein</p>
   <h2>Lecture Days, Time and Place:</h2>
